--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,12 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+    // "components/Contact Form Section/MapComponent.jsx"
+  ],
   "exclude": ["node_modules"]
 }
