--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.7",
+    "framer-motion": "^10.12.18",
     "lucide-react": "^0.258.0",
     "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.1.0",
