removed tsx from components.json

--- a/components.json
+++ b/components.json
@@ -8,6 +8,7 @@
     "baseColor": "zinc",
     "cssVariables": true
   },
+  "tsx": false,
   "aliases": {
     "components": "@/components",
     "utils": "@/lib/utils"
